// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutrageParserService parseMessage should return parsed message 1`] = `
{
  "date": 2024-06-24T21:00:00.000Z,
  "region": "cherkasy",
  "shifts": [
    {
      "end": "01:00",
      "queues": [
        "3",
        "4",
      ],
      "start": "00:00",
    },
    {
      "end": "02:00",
      "queues": [
        "3",
        "4",
      ],
      "start": "01:00",
    },
    {
      "end": "03:00",
      "queues": [
        "5",
        "6",
        "1",
      ],
      "start": "02:00",
    },
    {
      "end": "04:00",
      "queues": [
        "5",
        "6",
        "1",
      ],
      "start": "03:00",
    },
    {
      "end": "05:00",
      "queues": [
        "2",
        "3",
        "4",
      ],
      "start": "04:00",
    },
    {
      "end": "06:00",
      "queues": [
        "2",
        "3",
      ],
      "start": "05:00",
    },
    {
      "end": "07:00",
      "queues": [
        "5",
        "6",
      ],
      "start": "06:00",
    },
    {
      "end": "08:00",
      "queues": [
        "5",
        "6",
      ],
      "start": "07:00",
    },
    {
      "end": "09:00",
      "queues": [
        "1",
        "2",
      ],
      "start": "08:00",
    },
    {
      "end": "10:00",
      "queues": [
        "1",
        "2",
      ],
      "start": "09:00",
    },
    {
      "end": "11:00",
      "queues": [
        "3",
        "4",
      ],
      "start": "10:00",
    },
    {
      "end": "12:00",
      "queues": [
        "3",
        "4",
      ],
      "start": "11:00",
    },
    {
      "end": "13:00",
      "queues": [
        "5",
        "6",
        "1",
      ],
      "start": "12:00",
    },
    {
      "end": "14:00",
      "queues": [
        "5",
        "6",
        "1",
      ],
      "start": "13:00",
    },
    {
      "end": "15:00",
      "queues": [
        "2",
        "3",
        "4",
      ],
      "start": "14:00",
    },
    {
      "end": "16:00",
      "queues": [
        "2",
        "3",
        "4",
      ],
      "start": "15:00",
    },
    {
      "end": "17:00",
      "queues": [
        "5",
        "6",
        "1",
      ],
      "start": "16:00",
    },
    {
      "end": "18:00",
      "queues": [
        "5",
        "6",
        "1",
      ],
      "start": "17:00",
    },
    {
      "end": "19:00",
      "queues": [
        "2",
        "3",
        "4",
      ],
      "start": "18:00",
    },
    {
      "end": "20:00",
      "queues": [
        "2",
        "3",
        "4",
      ],
      "start": "19:00",
    },
    {
      "end": "21:00",
      "queues": [
        "5",
        "6",
        "1",
      ],
      "start": "20:00",
    },
    {
      "end": "22:00",
      "queues": [
        "5",
        "6",
        "1",
      ],
      "start": "21:00",
    },
    {
      "end": "23:00",
      "queues": [
        "2",
        "3",
        "4",
      ],
      "start": "22:00",
    },
    {
      "end": "24:00",
      "queues": [
        "3",
        "4",
      ],
      "start": "23:00",
    },
  ],
  "type": "schedule",
}
`;

exports[`OutrageParserService parseMessage should return parsed message from real old mock 1`] = `
{
  "date": 2024-06-10T21:00:00.000Z,
  "region": "cherkasy",
  "shifts": [
    {
      "end": "15:00",
      "queues": [
        "2",
      ],
      "start": "14:00",
    },
    {
      "end": "16:00",
      "queues": [
        "2",
      ],
      "start": "15:00",
    },
    {
      "end": "17:00",
      "queues": [
        "3",
      ],
      "start": "16:00",
    },
    {
      "end": "18:00",
      "queues": [
        "3",
      ],
      "start": "17:00",
    },
    {
      "end": "19:00",
      "queues": [
        "4",
      ],
      "start": "18:00",
    },
    {
      "end": "20:00",
      "queues": [
        "4",
      ],
      "start": "19:00",
    },
    {
      "end": "21:00",
      "queues": [
        "5",
      ],
      "start": "20:00",
    },
    {
      "end": "22:00",
      "queues": [
        "5",
      ],
      "start": "21:00",
    },
    {
      "end": "23:00",
      "queues": [
        "6",
      ],
      "start": "22:00",
    },
  ],
  "type": "change",
}
`;

exports[`OutrageParserService parseShifts should return shifts from real new mock 1`] = `
[
  {
    "end": "01:00",
    "queues": [
      "3",
      "4",
    ],
    "start": "00:00",
  },
  {
    "end": "02:00",
    "queues": [
      "3",
      "4",
    ],
    "start": "01:00",
  },
  {
    "end": "03:00",
    "queues": [
      "5",
      "6",
      "1",
    ],
    "start": "02:00",
  },
  {
    "end": "04:00",
    "queues": [
      "5",
      "6",
      "1",
    ],
    "start": "03:00",
  },
  {
    "end": "05:00",
    "queues": [
      "2",
      "3",
      "4",
    ],
    "start": "04:00",
  },
  {
    "end": "06:00",
    "queues": [
      "2",
      "3",
    ],
    "start": "05:00",
  },
  {
    "end": "07:00",
    "queues": [
      "5",
      "6",
    ],
    "start": "06:00",
  },
  {
    "end": "08:00",
    "queues": [
      "5",
      "6",
    ],
    "start": "07:00",
  },
  {
    "end": "09:00",
    "queues": [
      "1",
      "2",
    ],
    "start": "08:00",
  },
  {
    "end": "10:00",
    "queues": [
      "1",
      "2",
    ],
    "start": "09:00",
  },
  {
    "end": "11:00",
    "queues": [
      "3",
      "4",
    ],
    "start": "10:00",
  },
  {
    "end": "12:00",
    "queues": [
      "3",
      "4",
    ],
    "start": "11:00",
  },
  {
    "end": "13:00",
    "queues": [
      "5",
      "6",
      "1",
    ],
    "start": "12:00",
  },
  {
    "end": "14:00",
    "queues": [
      "5",
      "6",
      "1",
    ],
    "start": "13:00",
  },
  {
    "end": "15:00",
    "queues": [
      "2",
      "3",
      "4",
    ],
    "start": "14:00",
  },
  {
    "end": "16:00",
    "queues": [
      "2",
      "3",
      "4",
    ],
    "start": "15:00",
  },
  {
    "end": "17:00",
    "queues": [
      "5",
      "6",
      "1",
    ],
    "start": "16:00",
  },
  {
    "end": "18:00",
    "queues": [
      "5",
      "6",
      "1",
    ],
    "start": "17:00",
  },
  {
    "end": "19:00",
    "queues": [
      "2",
      "3",
      "4",
    ],
    "start": "18:00",
  },
  {
    "end": "20:00",
    "queues": [
      "2",
      "3",
      "4",
    ],
    "start": "19:00",
  },
  {
    "end": "21:00",
    "queues": [
      "5",
      "6",
      "1",
    ],
    "start": "20:00",
  },
  {
    "end": "22:00",
    "queues": [
      "5",
      "6",
      "1",
    ],
    "start": "21:00",
  },
  {
    "end": "23:00",
    "queues": [
      "2",
      "3",
      "4",
    ],
    "start": "22:00",
  },
  {
    "end": "24:00",
    "queues": [
      "3",
      "4",
    ],
    "start": "23:00",
  },
]
`;

exports[`OutrageParserService parseShifts should return shifts from real old mock 1`] = `
[
  {
    "end": "15:00",
    "queues": [
      "2",
    ],
    "start": "14:00",
  },
  {
    "end": "16:00",
    "queues": [
      "2",
    ],
    "start": "15:00",
  },
  {
    "end": "17:00",
    "queues": [
      "3",
    ],
    "start": "16:00",
  },
  {
    "end": "18:00",
    "queues": [
      "3",
    ],
    "start": "17:00",
  },
  {
    "end": "19:00",
    "queues": [
      "4",
    ],
    "start": "18:00",
  },
  {
    "end": "20:00",
    "queues": [
      "4",
    ],
    "start": "19:00",
  },
  {
    "end": "21:00",
    "queues": [
      "5",
    ],
    "start": "20:00",
  },
  {
    "end": "22:00",
    "queues": [
      "5",
    ],
    "start": "21:00",
  },
  {
    "end": "23:00",
    "queues": [
      "6",
    ],
    "start": "22:00",
  },
]
`;
